--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="media">
                 <div class="play"><img onclick="showvideo()" src="billeder/playknap.png" alt="Afspilvideo"></div>
-                <video id="main" controls autoplay="autoplay" src="billeder/forside/Optagelse%20(16).mp4"></video></div>
+                <video id="main" controls  src="billeder/forside/Optagelse%20(16).mp4"></video></div>
             </div>
         </nav>
     </header>
